# tauri-projects

./: .gitignore  README.md
.github/workflows/: build-with-updater.yaml  build.yaml
example/: package-lock.json  package.json
example/src/: index.html
example/src-tauri/: Cargo.toml  tauri.conf.json
example10/: README.md  package-lock.json  package.json
example10/src-tauri/: Cargo.toml  tauri.conf.json
example11/: package-lock.json  package.json
example11/src/: App.vue
example11/src-tauri/: Cargo.toml  tauri.conf.json
example12/: package-lock.json  package.json
example12/src/: App.vue  styles.css
example12/src-tauri/: Cargo.toml  tauri.conf.json
example13/: package-lock.json  webpack.config.cjs
example13/src/: App.vue
example13/src-tauri/: Cargo.toml  tauri.conf.json
example14/: package-lock.json  package.json
example14/src-tauri/: Cargo.toml  tauri.conf.json
example15/: README.md  index.html  package-lock.json  package.json
example15/src/: index.html  index1.html  index2.html
example15/src-tauri/: Cargo.toml  tauri.conf.json
example15/src-tauri/capabilities/: default.json
example15/src-tauri/src/: lib.rs  main.rs
example16/: package-lock.json  package.json
example16/src/: index.html  index3.html  index4.html
example16/src-tauri/: Cargo.toml  tauri.conf.json
example17/: README.md  index.html  package-lock.json  package.json  vite.config.js
example17/src/: App.vue
example17/src-tauri/: Cargo.toml  tauri.conf.json
example17/src-tauri/src/: lib.rs
example17/wasm/: App.vue
example17/wasm/rust_wasm/: Cargo.toml
example17/wasm/rust_wasm/src/: lib.rs
example18/: .gitignore  package-lock.json  package.json  vite.config.js
example18/src-tauri/: Cargo.toml  tauri.conf.json
example18/src-tauri/src/: main.rs
example19/: package-lock.json  package.json
example19/src-tauri/: Cargo.toml  tauri.conf.json
example2/: package-lock.json  package.json
example2/src-tauri/: Cargo.toml  tauri.conf.json
example20/: README.md  package-lock.json  package.json
example20/src/: App.vue
example20/src-tauri/: Cargo.toml  tauri.conf.json
example21/: package-lock.json  package.json
example21/src/: App.vue
example21/src-tauri/: Cargo.toml  tauri.conf.json
example22/: README.md  index.html  package-lock.json  package.json
example22/src-tauri/: Cargo.toml  tauri.conf.json
example23/: README.md  package-lock.json  package.json
example23/src/: App.vue
example23/src-tauri/: Cargo.toml  tauri.conf.json
example24/: package-lock.json  package.json
example24/src-tauri/: Cargo.toml  tauri.conf.json
example25/: README.md  package-lock.json  package.json
example25/src/: App.vue
example25/src-tauri/: Cargo.toml  tauri.conf.json
example26/: README.md  package-lock.json  package.json
example26/src-tauri/: Cargo.toml  tauri.conf.json
example3/: package-lock.json  package.json
example3/src-tauri/: Cargo.toml  tauri.conf.json
example4/: package-lock.json  package.json
example4/src/: index.html
example4/src-tauri/: Cargo.toml  tauri.conf.json
example4/src-tauri/src/: main.rs
example5/: package-lock.json  package.json
example5/src-tauri/: Cargo.toml  tauri.conf.json
example6/: package-lock.json  package.json
example6/src-tauri/: Cargo.toml  tauri.conf.json
example7/: package-lock.json  package.json
example7/src/: App.vue
example7/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
example8/: README.md  package-lock.json  package.json
example8/src-tauri/: Cargo.toml  tauri.conf.json
example9/: package-lock.json  package.json
example9/src/: App.vue
example9/src-tauri/: Cargo.toml  tauri.conf.json
(+40 files in other folders)
