[package]
name = "example17"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "multiwebview_lib"
path = "src/lib.rs"  # Adjust if your actual path differs
crate-type = ["lib", "cdylib"]


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
# web-sys = { version = "0.3.69", features = ['Window', 'Response'] }

