[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"  # Use the wee_alloc allocator
wasm-bindgen = "0.2"
web-sys = { version =  "0.3.69", features = ["Window", "Document", "HtmlElement"] }